# TaoTian-BSR-weekly-report

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.agents/skills/TT-bsr-ranking-report/: .env.example  .gitignore  SKILL.md  requirements.txt
.agents/skills/TT-bsr-ranking-report/references/: lark_report_doc_template.md  query_ranking_change_doris.md  report_render.md  schema.md
.agents/skills/TT-bsr-ranking-report/scripts/: config.py  generate_report_v2.py  lark_base_helper.py  main.py  prepare_and_write_data_v2.py  query_report_data.py  run_weekly_bsr.py  sync_data.py  sync_independent_base.py
.agents/skills/TT-bsr-ranking-report/tests/: test_fixture_coverage.py  test_lark_base_helper.py  test_prepare_and_write_data_v2.py  test_run_weekly_bsr.py  test_sync_data.py  test_sync_independent_base.py
.agents/skills/TT-bsr-ranking-report/tests/fixtures/: sanitized_weekly_products.json
.agents/workflows/: run_tt_bsr_weekly_workflow.py  tt-bsr-weekly-workflow.md
.codex/: config.toml
tests/: test_workflow_runner.py
