[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "taotian-bsr-ranking-weekly-report"
version = "0.1.0"
description = "Taotian BSR ranking weekly monitoring workflow"
requires-python = ">=3.11"
dependencies = [
  "pymysql>=1.1.1",
  "python-dotenv>=1.0.0",
  "pytest>=8.2,<10",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = [
  ".agents/skills/TT-bsr-ranking-report/tests",
  "tests",
]
pythonpath = [
  ".agents/skills/TT-bsr-ranking-report/scripts",
]
addopts = "-q"
